<resources>
    <string name="app_name">Laboratorio05TorresRosa</string>
    <!-- TODO: Remove or change this placeholder text -->
        <string name="hello_blank_fragment">This is a Movie</string>
    <string name="calification">Calification</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <string name="name">Name</string>
    <string name="new_movie">New Movie</string>
    <string name="billboard">Billboard</string>
</resources>